packages/headless-styles/src/components/Table/tableCSS.module.css
.table {
  border-collapse: separate;
  border-spacing: 0;
  display: table;
  font-variant-numeric: lining-nums tabular-nums;
  overflow: hidden;
  width: 100%;
}

.caption {
  caption-side: bottom;
  margin-top: 1rem;
  padding-bottom: 1rem;
  text-align: center;
}

.baseCell {
  font-size: 0.875rem;
  padding-bottom: 0.875rem;
  padding-inline-end: 1rem;
  padding-inline-start: 1rem;
  padding-top: 0.875rem;
  text-align: start;
}

.headCell {
  composes: baseCell;
  background-color: var(--ps-surface-strong);
  border-bottom: 1px solid var(--ps-border);
  font-variation-settings: 'wght' 700;
  font-weight: 700;
}

.bodyCell {
  composes: baseCell;
  border-bottom: 1px solid var(--ps-border-weak);
  font-variation-settings: 'wght' 500;
  font-weight: 500;
}

.tableRow {
  background-color: var(--ps-surface-weak);
}

.tableRow:hover {
  background-color: var(--ps-surface-medium);
}

